# http_server

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  Makefile  devenv.sh  project.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yml
docs/: diagram.drawio
include/: Calculator.hpp  SocketManager.hpp
src/: CMakeLists.txt  Calculator.cpp  SocketManager.cpp  main.cpp
src/common/: CMakeLists.txt  CommonFunctions.hpp  Definitions.hpp  Result.hpp  SocketException.hpp
src/exceptions/: CMakeLists.txt  SocketException.hpp
src/handlers/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.hpp  FileRequestHandler.cpp  FileRequestHandler.hpp  FileResponseHandler.cpp  FileResponseHandler.hpp  IRequestHandler.hpp  RequestDispatcher.cpp  RequestDispatcher.hpp
src/http/: CMakeLists.txt  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpStatusCode.cpp  HttpStatusCode.hpp  HttpVersion.hpp  Method.hpp  RequestParser.cpp  RequestParser.hpp
src/server/: CMakeLists.txt  Server.cpp  Server.hpp
src/socket/: CMakeLists.txt  SocketManager.cpp  SocketManager.hpp
static/: index.html
tests/: CMakeLists.txt  Client.hpp  TestCalculator.cpp  TestHttpRequest.cpp  TestSocketException.cpp  TestSocketManager.cpp
tests/handlers/: CMakeLists.txt  TestFileRequestHandler.cpp  TestFileResponseHandler.cpp  TestRequestDispatcher.cpp
tests/http/: CMakeLists.txt  TestHttpRequest.cpp  TestHttpResponse.cpp  TestRequestParser.cpp
tests/sct/: CMakeLists.txt
tests/sct/src/common/: CMakeLists.txt  Logger.cpp  Logger.hpp
tests/sct/src/runner/: CMakeLists.txt  Result.cpp  Result.hpp  TestCaseResult.cpp  TestCaseResult.hpp  TestGroup.cpp  TestGroup.hpp  TestRunner.cpp  TestRunner.hpp  TestSuite.cpp  TestSuite.hpp
tests/sct/src/tests/: CMakeLists.txt  ServerTestCase.cpp  ServerTestCase.hpp  TestCase.cpp  TestCase.hpp
tests/sct/ut/: CMakeLists.txt
tests/sct/ut/common/: CMakeLists.txt  TestLogger.cpp
tests/sct/ut/runner/: CMakeLists.txt  TestResult.cpp  TestTestGroup.cpp  TestTestRunner.cpp  TestTestSuite.cpp
tests/sct/ut/tests/: CMakeLists.txt  MockTestCase.cpp  MockTestCase.hpp  TestServerTestCase.cpp  TestTestCase.cpp
tests/server/: CMakeLists.txt
tests/ut/: Client.cpp  Client.hpp
tests/ut/common/: CMakeLists.txt  TestSocketException.cpp
tests/ut/handlers/: TestFileRequestHandler.cpp  TestRequestDispatcher.cpp
tests/ut/http/: TestHttpRequest.cpp  TestHttpResponse.cpp  TestRequestParser.cpp
tests/ut/server/: TestServer.cpp
tests/ut/socket/: CMakeLists.txt  TestSocketManager.cpp
